#TODO Gerer l'inclusion ou nom du registry en fonction de l'utilisation de windows ou non
lib_LTLIBRARIES = libtools.la
libtools_la_SOURCES = CError.cpp COptionParser.cpp  optionParser.c CError.h COptionParser.h  optionParser.h getopt_pp.cpp  getopt_pp.h 
include_HEADERS = CError.h COptionParser.h  optionParser.h getopt_pp.h

